--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1{
     color: rgb(255, 255, 255);
     text-decoration: none;
     margin: 10%;
-    padding: 50px;
+    /* padding: 50px; */
 
     
 }
@@ -46,9 +46,9 @@ a:hover {
 .barre {
     text-align: center;
     background-color: blue;
-    padding: 10px;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    /* padding: 10px; */
+    padding-top: 20px;
+    padding-bottom: 20px;
     
 }
 /* and barre de tache general */
